--- a/Cyclistic_GoogleData.ipynb
+++ b/Cyclistic_GoogleData.ipynb
@@ -1929,12 +1929,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysing phase "
+    "### Analysing phase \n",
+    "\n",
+    "After cleaning the data and saving the clean results into a new .csv file, we can import it and assign it to a variable to start out analysis using **numpy**\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1971,93 +1974,86 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1486082</th>\n",
-       "      <td>1486082</td>\n",
-       "      <td>2DBB012793BBABF1</td>\n",
-       "      <td>electric_bike</td>\n",
-       "      <td>2023-08-28 21:17:49</td>\n",
-       "      <td>2023-08-28 21:23:19</td>\n",
-       "      <td>member</td>\n",
-       "      <td>00:05:30</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2499586</th>\n",
-       "      <td>2499586</td>\n",
-       "      <td>3309F85F76A3150E</td>\n",
-       "      <td>electric_bike</td>\n",
-       "      <td>2023-10-12 11:37:52</td>\n",
-       "      <td>2023-10-12 11:51:39</td>\n",
-       "      <td>member</td>\n",
-       "      <td>00:13:47</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5290150</th>\n",
-       "      <td>5290150</td>\n",
-       "      <td>462F98F6AF6FBE23</td>\n",
-       "      <td>electric_bike</td>\n",
-       "      <td>2024-06-10 08:55:38.333</td>\n",
-       "      <td>2024-06-10 09:00:35.260</td>\n",
-       "      <td>member</td>\n",
-       "      <td>00:04:56</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3492057</th>\n",
-       "      <td>3492057</td>\n",
-       "      <td>EBF3B924F2846922</td>\n",
+       "      <th>1385886</th>\n",
+       "      <td>1385886</td>\n",
+       "      <td>5AC29EE68ACA817D</td>\n",
        "      <td>classic_bike</td>\n",
-       "      <td>2024-02-18 12:58:53</td>\n",
-       "      <td>2024-02-18 13:02:45</td>\n",
+       "      <td>2023-08-12 08:51:43</td>\n",
+       "      <td>2023-08-12 08:58:49</td>\n",
        "      <td>member</td>\n",
-       "      <td>00:03:52</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1382373</th>\n",
-       "      <td>1382373</td>\n",
-       "      <td>7C876CF29B2D5D5D</td>\n",
-       "      <td>electric_bike</td>\n",
-       "      <td>2023-08-28 19:07:13</td>\n",
-       "      <td>2023-08-28 19:12:28</td>\n",
-       "      <td>casual</td>\n",
-       "      <td>00:05:15</td>\n",
+       "      <td>00:07:06</td>\n",
        "      <td>2023</td>\n",
        "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>366224</th>\n",
+       "      <td>366224</td>\n",
+       "      <td>07801B3DC2C3C04F</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2023-07-31 10:05:41</td>\n",
+       "      <td>2023-07-31 10:19:44</td>\n",
+       "      <td>member</td>\n",
+       "      <td>00:14:03</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1744647</th>\n",
+       "      <td>1744647</td>\n",
+       "      <td>D57FC820BF5B23E2</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2023-09-05 09:58:53</td>\n",
+       "      <td>2023-09-05 11:01:14</td>\n",
+       "      <td>casual</td>\n",
+       "      <td>01:02:21</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>393517</th>\n",
+       "      <td>393517</td>\n",
+       "      <td>A097A55A8E3442A5</td>\n",
+       "      <td>electric_bike</td>\n",
+       "      <td>2023-07-21 14:22:46</td>\n",
+       "      <td>2023-07-21 14:29:59</td>\n",
+       "      <td>member</td>\n",
+       "      <td>00:07:13</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3777036</th>\n",
+       "      <td>3777036</td>\n",
+       "      <td>289A7517C2199815</td>\n",
+       "      <td>electric_bike</td>\n",
+       "      <td>2024-03-04 07:08:36</td>\n",
+       "      <td>2024-03-04 07:09:02</td>\n",
+       "      <td>casual</td>\n",
+       "      <td>00:00:26</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Unnamed: 0           ride_id  rideable_type               started_at  \\\n",
-       "1486082     1486082  2DBB012793BBABF1  electric_bike      2023-08-28 21:17:49   \n",
-       "2499586     2499586  3309F85F76A3150E  electric_bike      2023-10-12 11:37:52   \n",
-       "5290150     5290150  462F98F6AF6FBE23  electric_bike  2024-06-10 08:55:38.333   \n",
-       "3492057     3492057  EBF3B924F2846922   classic_bike      2024-02-18 12:58:53   \n",
-       "1382373     1382373  7C876CF29B2D5D5D  electric_bike      2023-08-28 19:07:13   \n",
+       "         Unnamed: 0           ride_id  rideable_type           started_at  \\\n",
+       "1385886     1385886  5AC29EE68ACA817D   classic_bike  2023-08-12 08:51:43   \n",
+       "366224       366224  07801B3DC2C3C04F   classic_bike  2023-07-31 10:05:41   \n",
+       "1744647     1744647  D57FC820BF5B23E2   classic_bike  2023-09-05 09:58:53   \n",
+       "393517       393517  A097A55A8E3442A5  electric_bike  2023-07-21 14:22:46   \n",
+       "3777036     3777036  289A7517C2199815  electric_bike  2024-03-04 07:08:36   \n",
        "\n",
-       "                        ended_at member_casual ride_length_formatted  Year  \\\n",
-       "1486082      2023-08-28 21:23:19        member              00:05:30  2023   \n",
-       "2499586      2023-10-12 11:51:39        member              00:13:47  2023   \n",
-       "5290150  2024-06-10 09:00:35.260        member              00:04:56  2024   \n",
-       "3492057      2024-02-18 13:02:45        member              00:03:52  2024   \n",
-       "1382373      2023-08-28 19:12:28        casual              00:05:15  2023   \n",
-       "\n",
-       "         Month  \n",
-       "1486082      8  \n",
-       "2499586     10  \n",
-       "5290150      6  \n",
-       "3492057      2  \n",
-       "1382373      8  "
+       "                    ended_at member_casual ride_length_formatted  Year  Month  \n",
+       "1385886  2023-08-12 08:58:49        member              00:07:06  2023      8  \n",
+       "366224   2023-07-31 10:19:44        member              00:14:03  2023      7  \n",
+       "1744647  2023-09-05 11:01:14        casual              01:02:21  2023      9  \n",
+       "393517   2023-07-21 14:29:59        member              00:07:13  2023      7  \n",
+       "3777036  2024-03-04 07:09:02        casual              00:00:26  2024      3  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2065,129 +2061,168 @@
    "source": [
     "#import the cleaned data assigned into a variable \n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "dataClean = pd.read_csv(\"results_clean.csv\", sep=\",\")\n",
     "dataClean.sample(5)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are going to explore the data, group it and apply aggregation functions like sum(), mean(), count(), min(), max()"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Year</th>\n",
-       "      <th>Month</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"6\" valign=\"top\">2023</th>\n",
-       "      <th>7</th>\n",
-       "      <td>294642877425</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>890144788728</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1247798355888</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1328962582510</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1060033627289</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>720928212813</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"7\" valign=\"top\">2024</th>\n",
-       "      <th>1</th>\n",
-       "      <td>492836794542</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>800237650590</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1160981478726</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1745866576350</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2877290056177</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>3823277347892</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>4573864637223</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "               Unnamed: 0\n",
-       "Year Month               \n",
-       "2023 7       294642877425\n",
-       "     8       890144788728\n",
-       "     9      1247798355888\n",
-       "     10     1328962582510\n",
-       "     11     1060033627289\n",
-       "     12      720928212813\n",
-       "2024 1       492836794542\n",
-       "     2       800237650590\n",
-       "     3      1160981478726\n",
-       "     4      1745866576350\n",
-       "     5      2877290056177\n",
-       "     6      3823277347892\n",
-       "     7      4573864637223"
+       "member    4113411\n",
+       "casual    2369932\n",
+       "Name: member_casual, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataClean.groupby(['Year', 'Month']).sum()"
+    "#Checking how many annual members and casual riders we have\n",
+    "dataClean['member_casual'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, the majority of the users in the previous 12 months was composed my annual members (4.113.411). We have only 2.369.932 casual riders. Let's check what this represents in percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "member    63.445833\n",
+       "casual    36.554167\n",
+       "Name: member_casual, dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Checking the percentage of members and casual riders by dividing the data and multiplying by 100\n",
+    "(dataClean['member_casual'].value_counts()/6483343)*100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The annual members represent **63,5%** of all the rides in the previous 12 months and the casual riders only **35,5%**.\n",
+    "\n",
+    "Let's to the same thing for the type of bike"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "electric_bike    3224572\n",
+       "classic_bike     3224390\n",
+       "docked_bike        34381\n",
+       "Name: rideable_type, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Checking the distribution of types of bikes used in the previous 12 months\n",
+    "dataClean['rideable_type'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "electric_bike    49.736255\n",
+       "classic_bike     49.733448\n",
+       "docked_bike       0.530297\n",
+       "Name: rideable_type, dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Checking the percentage of bike types by dividing the data and multiplying by 100\n",
+    "(dataClean['rideable_type'].value_counts()/6483343)*100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the previous 12 months, both eletric and classic bikes were equally used by all users, almost 50/50 in the general preference. However, we must see if members and casual riders have a specific preference for the type of bike. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  member_casual  rideable_type    count  total_count  proportion\n",
+      "0        casual   classic_bike  1124432      3224390    0.348727\n",
+      "1        member   classic_bike  2099958      3224390    0.651273\n",
+      "2        casual    docked_bike    34381        34381    1.000000\n",
+      "3        casual  electric_bike  1211119      3224572    0.375591\n",
+      "4        member  electric_bike  2013453      3224572    0.624409\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Grouping the data\n",
+    "members_types = dataClean.groupby(['member_casual', 'rideable_type']).size().reset_index(name='count')\n",
+    "\n",
+    "# Calculate the total counts per user type\n",
+    "total_counts = dataClean.groupby('rideable_type').size().reset_index(name='total_count')\n",
+    "\n",
+    "# Merge the total counts with the grouped data\n",
+    "merged = pd.merge(members_types, total_counts, on='rideable_type')\n",
+    "\n",
+    "# Calculate the proportion\n",
+    "merged['proportion'] = merged['count'] / merged['total_count']\n",
+    "\n",
+    "print(merged)\n",
+    "\n"
    ]
   }
  ],
