--- a/Cyclistic_GoogleData.ipynb
+++ b/Cyclistic_GoogleData.ipynb
@@ -3146,83 +3146,83 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3869097</th>\n",
-       "      <td>3869097</td>\n",
-       "      <td>3875648</td>\n",
-       "      <td>3875648</td>\n",
-       "      <td>C3ED042600490041</td>\n",
-       "      <td>electric_bike</td>\n",
-       "      <td>2024-03-27 06:56:48</td>\n",
-       "      <td>2024-03-27 07:11:33</td>\n",
-       "      <td>member</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0h 14m</td>\n",
-       "      <td>14.750000</td>\n",
-       "      <td>Wednesday</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1954390</th>\n",
-       "      <td>1954390</td>\n",
-       "      <td>1957353</td>\n",
-       "      <td>1957353</td>\n",
-       "      <td>35C41C344DA98686</td>\n",
+       "      <th>4031</th>\n",
+       "      <td>4031</td>\n",
+       "      <td>4032</td>\n",
+       "      <td>4032</td>\n",
+       "      <td>CDC494F74E94FBF0</td>\n",
        "      <td>classic_bike</td>\n",
-       "      <td>2023-09-12 18:18:06</td>\n",
-       "      <td>2023-09-12 18:22:34</td>\n",
+       "      <td>2023-07-03 17:06:12</td>\n",
+       "      <td>2023-07-03 17:59:14</td>\n",
        "      <td>member</td>\n",
        "      <td>2023</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0h 4m</td>\n",
-       "      <td>4.466667</td>\n",
-       "      <td>Tuesday</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0h 53m</td>\n",
+       "      <td>53.033333</td>\n",
+       "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1552124</th>\n",
-       "      <td>1552124</td>\n",
-       "      <td>1554855</td>\n",
-       "      <td>1554855</td>\n",
-       "      <td>E53EDA480A3E93A8</td>\n",
-       "      <td>electric_bike</td>\n",
-       "      <td>2023-09-19 08:32:18</td>\n",
-       "      <td>2023-09-19 08:39:37</td>\n",
+       "      <th>2647798</th>\n",
+       "      <td>2647798</td>\n",
+       "      <td>2652081</td>\n",
+       "      <td>2652081</td>\n",
+       "      <td>C4B1455B961F13FC</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2023-10-20 14:17:11</td>\n",
+       "      <td>2023-10-20 14:34:07</td>\n",
        "      <td>member</td>\n",
        "      <td>2023</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0h 7m</td>\n",
-       "      <td>7.316667</td>\n",
-       "      <td>Tuesday</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1110775</th>\n",
-       "      <td>1110775</td>\n",
-       "      <td>1112398</td>\n",
-       "      <td>1112398</td>\n",
-       "      <td>9BED2FBB731D12C9</td>\n",
-       "      <td>electric_bike</td>\n",
-       "      <td>2023-08-25 23:55:21</td>\n",
-       "      <td>2023-08-25 23:59:15</td>\n",
-       "      <td>member</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0h 3m</td>\n",
-       "      <td>3.900000</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0h 16m</td>\n",
+       "      <td>16.933333</td>\n",
        "      <td>Friday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4857368</th>\n",
-       "      <td>4857368</td>\n",
-       "      <td>4865688</td>\n",
-       "      <td>4865688</td>\n",
-       "      <td>6F5E78F0996CCC62</td>\n",
+       "      <th>3779126</th>\n",
+       "      <td>3779126</td>\n",
+       "      <td>3785360</td>\n",
+       "      <td>3785360</td>\n",
+       "      <td>5B2C72E182F541A6</td>\n",
        "      <td>electric_bike</td>\n",
-       "      <td>2024-05-23 17:04:26</td>\n",
-       "      <td>2024-05-23 17:21:47</td>\n",
+       "      <td>2024-03-18 18:33:41</td>\n",
+       "      <td>2024-03-18 18:43:48</td>\n",
        "      <td>member</td>\n",
        "      <td>2024</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0h 17m</td>\n",
-       "      <td>17.350000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0h 10m</td>\n",
+       "      <td>10.116667</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4404218</th>\n",
+       "      <td>4404218</td>\n",
+       "      <td>4411604</td>\n",
+       "      <td>4411604</td>\n",
+       "      <td>B1677BBF98CB3E94</td>\n",
+       "      <td>electric_bike</td>\n",
+       "      <td>2024-04-17 09:46:21</td>\n",
+       "      <td>2024-04-17 09:49:39</td>\n",
+       "      <td>member</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0h 3m</td>\n",
+       "      <td>3.300000</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1241350</th>\n",
+       "      <td>1241350</td>\n",
+       "      <td>1243010</td>\n",
+       "      <td>1243010</td>\n",
+       "      <td>609014C4D64730EB</td>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>2023-08-31 08:34:24</td>\n",
+       "      <td>2023-08-31 08:40:01</td>\n",
+       "      <td>member</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0h 5m</td>\n",
+       "      <td>5.616667</td>\n",
        "      <td>Thursday</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3231,32 +3231,32 @@
       ],
       "text/plain": [
        "         Unnamed: 0  Unnamed: 0.1  Unnamed: 0.1.1           ride_id  \\\n",
-       "3869097     3869097       3875648         3875648  C3ED042600490041   \n",
-       "1954390     1954390       1957353         1957353  35C41C344DA98686   \n",
-       "1552124     1552124       1554855         1554855  E53EDA480A3E93A8   \n",
-       "1110775     1110775       1112398         1112398  9BED2FBB731D12C9   \n",
-       "4857368     4857368       4865688         4865688  6F5E78F0996CCC62   \n",
+       "4031           4031          4032            4032  CDC494F74E94FBF0   \n",
+       "2647798     2647798       2652081         2652081  C4B1455B961F13FC   \n",
+       "3779126     3779126       3785360         3785360  5B2C72E182F541A6   \n",
+       "4404218     4404218       4411604         4411604  B1677BBF98CB3E94   \n",
+       "1241350     1241350       1243010         1243010  609014C4D64730EB   \n",
        "\n",
        "         rideable_type           started_at             ended_at  \\\n",
-       "3869097  electric_bike  2024-03-27 06:56:48  2024-03-27 07:11:33   \n",
-       "1954390   classic_bike  2023-09-12 18:18:06  2023-09-12 18:22:34   \n",
-       "1552124  electric_bike  2023-09-19 08:32:18  2023-09-19 08:39:37   \n",
-       "1110775  electric_bike  2023-08-25 23:55:21  2023-08-25 23:59:15   \n",
-       "4857368  electric_bike  2024-05-23 17:04:26  2024-05-23 17:21:47   \n",
+       "4031      classic_bike  2023-07-03 17:06:12  2023-07-03 17:59:14   \n",
+       "2647798   classic_bike  2023-10-20 14:17:11  2023-10-20 14:34:07   \n",
+       "3779126  electric_bike  2024-03-18 18:33:41  2024-03-18 18:43:48   \n",
+       "4404218  electric_bike  2024-04-17 09:46:21  2024-04-17 09:49:39   \n",
+       "1241350   classic_bike  2023-08-31 08:34:24  2023-08-31 08:40:01   \n",
        "\n",
        "        member_casual  Year  Month ride_length  ride_length_minutes  \\\n",
-       "3869097        member  2024      3      0h 14m            14.750000   \n",
-       "1954390        member  2023      9       0h 4m             4.466667   \n",
-       "1552124        member  2023      9       0h 7m             7.316667   \n",
-       "1110775        member  2023      8       0h 3m             3.900000   \n",
-       "4857368        member  2024      5      0h 17m            17.350000   \n",
+       "4031           member  2023      7      0h 53m            53.033333   \n",
+       "2647798        member  2023     10      0h 16m            16.933333   \n",
+       "3779126        member  2024      3      0h 10m            10.116667   \n",
+       "4404218        member  2024      4       0h 3m             3.300000   \n",
+       "1241350        member  2023      8       0h 5m             5.616667   \n",
        "\n",
        "        day_of_week  \n",
-       "3869097   Wednesday  \n",
-       "1954390     Tuesday  \n",
-       "1552124     Tuesday  \n",
-       "1110775      Friday  \n",
-       "4857368    Thursday  "
+       "4031         Monday  \n",
+       "2647798      Friday  \n",
+       "3779126      Monday  \n",
+       "4404218   Wednesday  \n",
+       "1241350    Thursday  "
       ]
      },
      "execution_count": 1,
@@ -3398,7 +3398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -3420,6 +3420,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Save the 'avg_ride_per_member' into a csv file\n",
+    "avg_ride_per_member.to_csv('avg_ride_per_member.csv', encoding='utf8')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3428,7 +3438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3479,7 +3489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3543,6 +3553,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Save the 'merged_members_month' into a csv file\n",
+    "merged_members_month.to_csv('rides_per_month_members.csv', encoding='utf8')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3553,7 +3573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3562,7 +3582,7 @@
     "df.sample(5)\n",
     "\n",
     "#save it into a pdf to update the file with the day of the week column \n",
-    "df.to_csv('df_cleaned.csv', encoding='utf8')"
+    "#df.to_csv('df_cleaned.csv', encoding='utf8')"
    ]
   },
   {
@@ -3574,7 +3594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3607,7 +3627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3658,6 +3678,16 @@
     "\n",
     "print(\"Annual Members DataFrame:\")\n",
     "print(member_days.sort_values(by='count', ascending=False)) #Sorting by descending order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Save the 'merged_members_days' into a csv file\n",
+    "merged_members_days.to_csv('rides_per_day_members.csv', encoding='utf8')"
    ]
   },
   {
